--- a/vec2vec/configs/unsupervised_tiny.toml
+++ b/vec2vec/configs/unsupervised_tiny.toml
@@ -1,61 +1,77 @@
 [general]
-dataset = "enron"
-unsup_emb = "gte"
-sup_emb   = "gtr"
 seed = 42
-epochs = 1
-bs = 32
-val_bs = 32
-val_size = 256
-n_embs_per_batch = 1
-max_seq_length = 64
-normalize_embeddings = true
-wandb_project = 'unsupervised_disc'
-use_wandb = false
-save_dir = "runs/{}/"
-wandb_name = "unsup_tiny"
-
+sampling_seed = 777
 train_dataset_seed = 123
 val_dataset_seed = 321
-sampling_seed = 777
-num_points = 1024
+normalize_embeddings = true
+mixed_precision = 'no'
+weight_init = 'kaiming'
+dataset = "enron"
+max_seq_length = 64
+unsup_emb = 'gte'
+sup_emb = 'gtr'
+n_embs_per_batch = 1
+finetune_mode = false
+noise_level = 0.0
+num_points = 1000
 
-# model style (baseline adversarial path already supported)
-style = "res_mlp"
-d_adapter = 768                  # will be aligned to encoder dims by adapters
-latent_dims = 256
-transform_depth = 2
-d_transform = 512
-d_hidden = 512
-norm_style = "batch"
-weight_init = "kaiming"
+[translator]
+style = 'res_mlp'
+norm_style = 'batch'
 depth = 2
+transform_depth = 2
+d_adapter = 768
+d_hidden = 512
+d_transform = 512
+use_small_output_adapters = false
+use_residual_adapters = true
 
-# GAN and losses
-[gan]
-enabled = true
+[discriminator]
+gan_style = "vanilla"
+disc_depth = 2
+disc_dim = 512
+use_residual = true
 
-[loss]
-loss_coefficient_rec = 9.8
+[train]
+bs = 32
+epochs = 2
+gradient_accumulation_steps = 1
+lr = 1e-3
+no_scheduler = true
+max_grad_norm = 1.0
 loss_coefficient_reverse_rec = 1.0
+loss_coefficient_rec = 9.8
 loss_coefficient_vsp = 1.0
-loss_coefficient_cc_vsp = 0.15
-loss_coefficient_cc_rec = 0.15
 loss_coefficient_cc_trans = 0.15
+loss_coefficient_cc_rec = 0.15
+loss_coefficient_cc_vsp = 0.15
+loss_coefficient_r1_penalty = 0.0
+warmup_length = 50
+patience = 20
+min_delta = 0.0
+min_epochs = 1
+
+[gan]
+disc_lr = 5e-4
+eps = 1e-8
+smooth = 0.9
+loss_coefficient_disc = 1.0
 loss_coefficient_gen = 1.0
 loss_coefficient_latent_gen = 1.0
 loss_coefficient_similarity_gen = 1.0
 
-# optimizer
-lr = 1e-3
-warmup_length = 50
-gradient_accumulation_steps = 1
-max_grad_norm = 1.0
-mixed_precision = "no"
+[eval]
+val_size = 256
+val_bs = 32
+top_k_size = 256
+top_k_batches = 2
+k = 16
+heatmap_size = 64
 
-gan_style = "vanilla"
-# discriminators
-disc_lr = 5e-4
-eps = 1e-8
-disc_dim = 512
-disc_depth = 2
+[logging]
+use_wandb = false
+wandb_project = 'unsupervised_disc'
+wandb_name = 'unsup_tiny'
+load_dir = './runs/'
+save_dir = './runs/{}/'
+force_dump = true
